# OmniAudit01

./: .env.example  .gitignore  00_START_HERE.md  CONTRIBUTING.md  FILES_REFERENCE.md  KAGGLE_CAPSTONE_CHECKLIST.md  KAGGLE_WRITEUP.md  LICENSE  QA_AUDIT_REPORT.md  QA_FINAL_SUMMARY.txt  QUICK_START.md  README.md  SECURITY.md  SETUP_GUIDE.md  TEST_REPORT_COMPLETE.md  UPGRADE_README.md  UPGRADE_SUMMARY.md  UPLOAD_FIX_SUMMARY.md  UPLOAD_VERIFICATION_REPORT.md  direct_scan_test.py  e2e_test.py  main.py  package-lock.json  pyproject.toml  qa_test_suite.py  quick_test.py  requirements.txt  test_api_upload.py  test_e2e.py  test_frontend.py  test_report.py  test_scan_api.py  test_scanner.py  test_vuln.py
.github/workflows/: ci.yml
agents/: swarm.py
api/: endpoints.py
config/: settings.py
docs/: DEMO_SCRIPT.md  KAGGLE_MEDIA_GUIDE.md
frontend/: README.md  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  data.ts  index.css  types.ts
frontend/src/components/: AgentPipeline.tsx  FileCardsGrid.tsx  FixIDE.tsx  InteractiveCodeBg.tsx  Navbar.tsx  ResultsDashboard.tsx  SecurityReportView.tsx  SettingsModal.tsx  UploadZone.tsx
frontend/src/utils/: api.ts  scannerEngine.ts
mcp_server/: __init__.py  filesystem_server.py
test_dummy_app/: app.py  db.py
