[project]
name = "omniaudit"
version = "2.0.0"
description = "AI Multi-Agent Security Auditor"
requires-python = ">=3.10"
dependencies = [
    "google-adk",
    "mcp",
    "python-dotenv",
    "bandit",
    "fastapi",
    "uvicorn",
    "httpx"
]

[tool.antigravity]
runtime = "python310"
entrypoint = "main.py"

[project.scripts]
omniaudit = "main:main"
